--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   gsheets: ^0.5.0
+  google_fonts: ^6.2.1
+  intl: ^0.20.2
+  fl_chart: ^0.66.0
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
@@ -59,6 +63,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/credentials.json
+    - assets/img.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
